# comtrade-conversion-weights

./: LICENSE  README.md  pyproject.toml
generator/: main.py  naics_user_config.py  run_weight_generator.sh  user_config.py
generator/data/concordance_groups/: from_H0_to_H1.csv  from_H0_to_S3.csv  from_H1_to_H0.csv  from_H1_to_H2.csv  from_H2_to_H1.csv  from_H2_to_H3.csv  from_H3_to_H2.csv  from_H3_to_H4.csv  from_H4_to_H3.csv  from_H4_to_H5.csv  from_H5_to_H4.csv  from_H5_to_H6.csv  from_H6_to_H5.csv  from_S1_to_S2.csv  from_S2_to_S1.csv  from_S2_to_S3.csv  from_S3_to_H0.csv  from_S3_to_S2.csv
generator/data/static/: SITC_consolidated_comtrade_concordances.csv  product_mappings.py  product_missing_concordance.csv
generator/data/temp/: iterations.csv
generator/prep_naics/: naics_ingest.py
generator/src/: __init__.py  create_product_groups.R
generator/src/R_code/: create_product_groups.R
generator/src/config/: paths_builder.py  product_mappings.py  source_target_pairs.py  user_config.py
generator/src/data_sources/: base.py  census.py  comtrade.py
generator/src/matlab/: MAIN_Matlab_optimization_GL  MAIN_Matlab_optimization_GL.m  OLSobj.m  constraint.m  hessian_fct_con.m  readme.txt  requiredMCRProducts.txt  run_MAIN_Matlab_optimization_GL.sh
generator/src/python_objects/: base.py  build_comtrade_input_matrices.py  build_input_matrices.py  build_naics_input_matrices.py  combine_concordances.py  combine_correlation_tables.py  concatenate_weights_by_conversion_pair.py  generator_params.py  group_weights.py  (+2 more)
generator/tests/: __init__.py  test.py
(+28 files in other folders)
